# echOS

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  autogen.sh  config.echOS  config.h  config.h.in~  configure.ac  crossconfigure.sh  envvars.sh  libtool  mount-loop.sh  vm-test.sh
efi-stage/: Makefile.am  autogen.sh  configure.ac  efi_fs.c  efi_fs.h  efi_malloc.c  efi_malloc.h  efi_mmap.c  efi_mmap.h  efi_pmm.c  efi_pmm.h  efi_random.c  efi_random.h  efi_video.c  efi_video.h  main.c  mmap.c  mmap.h
include/: elf.h  errno.h  stack.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
kernel/: Makefile.am  framebuffer.h  gdt.c  gdt.h  gdt_flush.s  idt.c  idt.h  kernel  kernel.c  kernel.h  link.ld
kernel/.libs/: libkernel.lai  libkernel.so.0.0.0
kernel/acpi/: Makefile.am  acpi.h  madt.c  xsdt.c
kernel/drivers/: ssfn_fb.c  ssfn_fb.h
kernel/memory/: heap.c  heap.h  paging.c  paging.h  paging_debug.c  physical.c  physical.h
lib/: Makefile.am  c.c  c.h  crt0.s  stack.c
lib/stdio/: Makefile.am  vsprintf.c
lib/stdlib/: Makefile.am  exit.c
lib/string/: Makefile.am  itoa.c  memcmp.c  memcpy.c  strcmp.c  strcpy.c  strlen.c
